[metadata]
name = nptr-cli
description = Manage your uploads to 0x0.st from the cli.
version = 0.3
author = Jonas Wunderlich
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/jonas-w/nptr-cli
project_urls =
    Documentation = https://jonas-w.github.io/nptr-cli
    Source = https://github.com/jonas-w/nptr-cli
    Download = https://pypi.org/project/nptr-cli

# only tested on linux, but should work anywhere
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.0

install_requires =
    importlib-metadata; python_version<"3.8"
    requests
    appdirs
    tomli
    validators

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    0x0 = nptr_cli.nptr:run

[tool:pytest]
addopts =
    --cov nptr_cli --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = nptr_cli
extensions =
    github_actions
    markdown
    pre_commit
